IBatisNet Change Log

------------------------------
1.5.1 - BETA
------------------------------
Issues
- IBATISNET-172 : Issue with QueryForList with constructor resultMap and select argument  
- IBATISNET-170 : auto-result-map Bug  
- IBATISNET-169 : SqlMap.xsd Correction   
- IBATISNET-168 : The parameter class reflection does not work anymore  

Improvements/Changes
- IBATISNET-167 : Update nunit to last stable version 2.2.8 

------------------------------
1.5 - 05/07/2006 BETA
------------------------------
Issues
- IBATISNET-163 : Missing datatype can throw null pointer exception 
- IBATISNET-158 : Add support for generic type in TypeAssemblyInfo
- IBATISNET-151 : Pre-load stored procedure parameters should use the already-open connection 
- IBATISNET-145 : Make NoOpLoggerFA the default logger when logging config is missing or malformed. Allow FactoryAdapter to be set by the application
- IBATISNET-143 : Allow selectKey node to process dynamic sql  
- IBATISNET-141 : DataMapper Developer Guide document bug  
- IBATISNET-139 : DBNull.Value as parameter object raises NullReferenceException in UnknownTypeHandler  
- IBATISNET-138 : QueryForMap with cache Bug/Regression  
- IBATISNET-137 : TypeHandlers for "System.Nullable(Of" fails with custom types  

Improvements/Changes
- IBATISNET-165 : Getting return value generatedKeys from stored procedures in inserts 
- IBATISNET-162 : Ability to override the default result object creation mechanism 
- IBATISNET-161 : Update log4net to last stable version 1.2.10 
- IBATISNET-156 : Added support for MARS  
				  Added allowMARS attribute on provider tag (used by SqlServer 2005, PostgreSQL).
- IBATISNET-155 Allow Constructor Initialization on resultMap 
  use
  <resultMap id="account-result-constructor" class="Account" > 
        <constructor> 
              <argument argumentName="id" column="Account_ID"/> 
              <argument argumentName="firstName" column="Account_FirstName"/> 